packages/compiler-rs/tests/vapor/snapshots/r#mod__vapor__transform_element__component_v_on.snap
---
source: tests/vapor/transform_element.rs
expression: code
---
import { createComponent as _createComponent } from "/vue-jsx-vapor/vapor";
import { toHandlers as _toHandlers } from "vue";
(() => {
  const n0 = _createComponent(Foo, { $: [() => _toHandlers(obj)] }, null, true);
  return n0;
})();
