packages/compiler-rs/tests/vapor/snapshots/r#mod__vapor__transform_element__dynamic_props_after_static_prop.snap
---
source: tests/vapor/transform_element.rs
expression: code
---
import { renderEffect as _renderEffect, setDynamicProps as _setDynamicProps, template as _template } from "vue";
const t0 = _template("<div></div>", true);
(() => {
  const n0 = t0();
  _renderEffect(() => _setDynamicProps(n0, [{ id: "foo" }, obj], true));
  return n0;
})();
