packages/compiler-rs/tests/vapor/snapshots/r#mod__vapor__transform_element__props_children.snap
---
source: tests/vapor/transform_element.rs
expression: code
---
import { template as _template } from "vue";
const t0 = _template("<div id=\"foo\"><span></span></div>", true);
(() => {
  const n0 = t0();
  return n0;
})();
